--- a/GitHub.html
+++ b/GitHub.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>GitHub Ricardo Couñago</title>
 </head>
 <body>
-    
+    <h1>GitHub</h1>
+
+    <img width="400" src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" >
 </body>
 </html>
