Image float right

--- a/GitHub.html
+++ b/GitHub.html
@@ -5,10 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>GitHub Ricardo Couñago</title>
+    <style>
+        body{
+            padding:10px;margin:30px;
+        }
+        img.logo{
+            float:right;
+        }
+    </style>
 </head>
 <body>
     <h1>GitHub</h1>
 
-    <img width="400" src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" >
+    <img class="logo" width="400" src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" >
+
+    <p>GitHub es un plataforma de <strong>desarrollo colaborativo</strong> que utiliza el sistema de <strong>control de versiones Git.</strong></p>
 </body>
 </html>
