--- a/GitHub.html
+++ b/GitHub.html
@@ -11,14 +11,27 @@
         }
         img.logo{
             float:right;
+            width: 30%;
+        }
+        div.text1{
+            width: 60%;
         }
     </style>
 </head>
 <body>
     <h1>GitHub</h1>
 
-    <img class="logo" width="400" src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" >
+    <img class="logo" src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" >
 
-    <p>GitHub es un plataforma de <strong>desarrollo colaborativo</strong> que utiliza el sistema de <strong>control de versiones Git.</strong></p>
+    <div class="text1">
+        
+        <p>GitHub es un plataforma de <strong>desarrollo colaborativo</strong> que utiliza el sistema de <strong>control de versiones Git.</strong></p>
+
+        <h2><u>Funcionamiento</u></h2>
+        <p>Esta plataforma permite realizar proyectos en equipo, de forma que cada miembro trabaja en una parte del codigo que puede ser añadida posteriormente; todo esto llevando un control
+            de todas las modificaciones realizadas y su autor. </p>
+        <h3><u>Otras funciones</u></h3>
+        <p>GitHub tambien permite hostear una página web existente en un repositorio.</p>
+    </div>
 </body>
 </html>
