--- a/GitHub.html
+++ b/GitHub.html
@@ -7,11 +7,12 @@
     <title>GitHub Ricardo Couñago</title>
     <style>
         body{
-            padding:10px;margin:30px;
+            padding:10px;
+            margin:30px;
         }
         img.logo{
-            float:right;
             width: 30%;
+            float:right;
         }
         div.text1{
             width: 60%;
@@ -20,8 +21,9 @@
 </head>
 <body>
     <h1>GitHub</h1>
-
+    
     <img class="logo" src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" >
+
 
     <div class="text1">
         
@@ -31,7 +33,13 @@
         <p>Esta plataforma permite realizar proyectos en equipo, de forma que cada miembro trabaja en una parte del codigo que puede ser añadida posteriormente; todo esto llevando un control
             de todas las modificaciones realizadas y su autor. </p>
         <h3><u>Otras funciones</u></h3>
-        <p>GitHub tambien permite hostear una página web existente en un repositorio.</p>
+        <ul>
+            <li>Seguimiento de bugs. (<i>Bug tracking</i>)</li>
+            <li>Petición de funciones. (<i>Feature request</i>)</li>
+            <li>Control de tareas. (<i>Task managing</i>)</li>
+            <li>Wikis de proyectos.</li>
+            <li>GitHub tambien permite hostear una página web existente en un repositorio.</li>
+        </ul>
     </div>
 </body>
 </html>
