--- a/GitHub.html
+++ b/GitHub.html
@@ -29,6 +29,12 @@
         
         <p>GitHub es un plataforma de <strong>desarrollo colaborativo</strong> que utiliza el sistema de <strong>control de versiones Git.</strong></p>
 
+        <h2><u>Historia</u></h2>
+        <p>
+            GitHub fué creada por Chris Wanstrath, PJ Hyett, Tom Preston-Werner y Scott Chacon usando Ruby on Rails en 2007 en San Francisco.
+            Tras varios hitos como el millón de repositorios en 2010 o los 3 millones en de usuarios en 2013, la empresa fué comprada por Microsoft, el 4 de Junio de 2018.
+        </p>
+
         <h2><u>Funcionamiento</u></h2>
         <p>Esta plataforma permite realizar proyectos en equipo, de forma que cada miembro trabaja en una parte del codigo que puede ser añadida posteriormente; todo esto llevando un control
             de todas las modificaciones realizadas y su autor. </p>
